[gd_scene load_steps=5 format=2]

[ext_resource path="res://Project/WorldObjects/Dialog/TextBoxContainer/TextBoxContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Project/WorldObjects/Dialog/AppearAnimator/AppearAnimator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Project/WorldObjects/Dialog/DialogUIComponents/DialogTextBox/DialogTextBox.gd" type="Script" id=4]
[ext_resource path="res://Project/WorldObjects/Dialog/FloatingContainer/FloatingContainer.tscn" type="PackedScene" id=5]

[node name="DialogTextBox" type="Node2D"]
script = ExtResource( 4 )

[node name="TextBoxContainer" parent="." instance=ExtResource( 1 )]

[node name="FloatingContainer" parent="." instance=ExtResource( 5 )]
target_node_path = NodePath("../TextBoxContainer")

[node name="AppearAnimator" parent="." instance=ExtResource( 2 )]
target_node_path = NodePath("../TextBoxContainer")
